Fix Gap Issues on Footer Icons

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ ion-icon {
   height: 2rem;
 }
 
-.icon {
+.icon-sm {
   width: 1.5rem;
   height: 1.5rem;
 }
